# LearnOpenGL

./: .gitmodules  CMakeLists.txt  Untitled  run.bat
include/glad/: glad.h
src/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  VectorMacros.h  glad.c  main.cpp
src/shaders/: fragment.frag  vertex.vert
